--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.35.0",
+    "chart.js": "^3.7.1",
+    "chart.js-plugin-labels-dv": "^3.0.5",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "react": "^18.0.0",
+    "react-apexcharts": "^1.4.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24"
   }
 }
